samples/_failures_safe/1761320444_b0447f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d831742.c: In function ‘main’:
./samples/SAFE/__tmp_7d831742.c:161:5: error: expected expression at end of input
  161 |     float ratio = (compressed_len * 100.0f) /
      |     ^~~~~
./samples/SAFE/__tmp_7d831742.c:161:5: error: expected declaration or statement at end of input
